--- a/templates/usuario_logado.html
+++ b/templates/usuario_logado.html
@@ -47,7 +47,7 @@
                 {% endif %}
         {% endwith %}
 
-        <form action="{{ url_for('edita_info_do_usuario', usuario_id=request.args.get('usuario_id')) }}" method="get" enctype="multipart/form-data">
+        <form action="{{ url_for('edita_info_do_usuario', usuario_id=current_user.id) }}" method="get" enctype="multipart/form-data">
                 <h1>Informações</h1>
                     <label for="nome" class="col-md-4 control-label">Nome</label>
                     <input id="nome" class="form-control" value="{{ current_user.nome_do_usuario }}" readonly>
