--- a/templates/informacoes_do_usuario_logado.html
+++ b/templates/informacoes_do_usuario_logado.html
@@ -46,7 +46,7 @@
                 {% endif %}
         {% endwith %}
 
-        <form action="{{ url_for('edita_info_do_usuario', usuario_id=request.args.get('usuario_id'), token=token) }}" method="post" enctype="multipart/form-data">
+        <form action="{{ url_for('edita_info_do_usuario', usuario_id=request.args.get('usuario_id'), endereco_id=endereco.endereco_id, token=token) }}" method="post" enctype="multipart/form-data">
                 <h1>Atualize seus dados</h1>
                     <label for="nome" class="col-md-4 control-label">Nome</label>
                     <input type="text" id="nome" name="nome" maxlength="26" size="26" class="form-control" value="{{ current_user.nome_do_usuario }}" required>
